--- a/frontend/index.html
+++ b/frontend/index.html
@@ -555,7 +555,7 @@
                         <i class="fas fa-church"></i>
                     </div>
                     <div>
-                        <div class="logo-text">Comunidade São Francisco</div>
+                        <div class="logo-text">Paróquia São José Operário</div>
                         <div class="logo-subtitle">Uma família em fé e amor</div>
                     </div>
                 </div>
@@ -675,7 +675,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Comunidade São Francisco</h3>
+                    <h3>Paróquia São José Operário</h3>
                     <p>Uma família em fé, esperança e amor. Junte-se a nós em nossa jornada espiritual.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
