--- a/frontend/missas.html
+++ b/frontend/missas.html
@@ -554,7 +554,7 @@
                         <i class="fas fa-church"></i>
                     </div>
                     <div>
-                        <div class="logo-text">Comunidade São Francisco</div>
+                        <div class="logo-text">Paróquia São José Operário</div>
                         <div class="logo-subtitle">Uma família em fé e amor</div>
                     </div>
                 </div>
@@ -745,7 +745,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Comunidade São Francisco</h3>
+                    <h3>Paróquia São José Operário</h3>
                     <p>Uma família em fé, esperança e amor. Junte-se a nós em nossa jornada espiritual.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -762,6 +762,7 @@
                         <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
                         <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
                         <li><a href="eventos.html"><i class="fas fa-chevron-right"></i> Eventos</a></li>
+                        <li><a href="leitura.html"><i class="fas fa-chevron-right"></i> Leitura do Dia</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
