--- a/frontend/retiros.html
+++ b/frontend/retiros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retiros Espirituais - Comunidade São Francisco</title>
+    <title>Retiros Espirituais - Paróquia São José Operário</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -544,7 +544,7 @@
                         <i class="fas fa-church"></i>
                     </div>
                     <div>
-                        <div class="logo-text">Comunidade São Francisco</div>
+                        <div class="logo-text">Paróquia São José Operário</div>
                         <div class="logo-subtitle">Uma família em fé e amor</div>
                     </div>
                 </div>
@@ -660,6 +660,7 @@
                     <h3>Links Rápidos</h3>
                     <ul class="footer-links">
                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Início</a></li>
+                        <li><a href="missas.html"><i class="fas fa-chevron-right"></i> Missas</a></li>
                         <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
                         <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
                         <li><a href="eventos.html"><i class="fas fa-chevron-right"></i> Eventos</a></li>
