--- a/frontend/missas.html
+++ b/frontend/missas.html
@@ -665,7 +665,7 @@
         </section>
 
         <section class="special-masses">
-            <h2 class="section-title"><i class="fas fa-star-of-david"></i> Missas Especiais</h2>
+            <h2 class="section-title"><i class="fas fa-church"></i> Missas Especiais</h2>
             
             <div class="special-mass-item">
                 <div class="special-mass-date">
