versão com modo escuro

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,6 +105,7 @@
         .nav-buttons {
             display: flex;
             gap: 10px;
+            align-items: center;
         }
 
         .nav-btn {
@@ -133,6 +134,128 @@
             box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
         }
 
+        .settings-container {
+            position: relative;
+        }
+
+        .settings-btn {
+            background: rgba(255, 255, 255, 0.15);
+            border: none;
+            padding: 10px 18px;
+            border-radius: 30px;
+            color: white;
+            font-weight: 600;
+            cursor: pointer;
+            transition: var(--transition);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            backdrop-filter: blur(5px);
+        }
+
+        .settings-btn:hover {
+            background: rgba(255, 255, 255, 0.25);
+            transform: translateY(-2px);
+        }
+
+        .settings-menu {
+            position: absolute;
+            top: 50px;
+            right: 0;
+            background: white;
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
+            padding: 15px 0;
+            min-width: 200px;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-10px);
+            transition: var(--transition);
+            z-index: 1000;
+        }
+
+        .settings-menu.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
+        .settings-menu-item {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px 20px;
+            color: var(--dark);
+            text-decoration: none;
+            transition: var(--transition);
+            border: none;
+            background: none;
+            width: 100%;
+            text-align: left;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .settings-menu-item:hover {
+            background: var(--light);
+            color: var(--primary);
+        }
+
+        .settings-menu-item i {
+            width: 20px;
+            text-align: center;
+            color: var(--secondary);
+        }
+
+        .settings-menu-divider {
+            height: 1px;
+            background: var(--light-gray);
+            margin: 8px 0;
+        }
+
+        .theme-toggle {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        .theme-options {
+            display: flex;
+            gap: 5px;
+            background: var(--light-gray);
+            padding: 4px;
+            border-radius: 20px;
+        }
+
+        .theme-option {
+            width: 30px;
+            height: 30px;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: var(--transition);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+        }
+
+        .theme-option.active {
+            background: var(--primary);
+            color: white;
+        }
+
+        .theme-light {
+            background: #f8f9fa;
+            color: #212529;
+        }
+
+        .theme-dark {
+            background: #212529;
+            color: #f8f9fa;
+        }
+
         .hero {
             text-align: center;
             padding: 40px 20px;
@@ -157,6 +280,18 @@
         }
 
         /* Main Content */
+        .settings-menu {
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-10px);
+        }
+
+        .settings-menu.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
         main {
             padding: 40px 0;
         }
@@ -543,6 +678,80 @@
                 justify-content: center;
             }
         }
+
+        /* Modo Escuro - Apenas cores azuis, conteúdo principal branco */
+        body.dark-mode {
+            --primary: #1e3a8a;
+            --primary-light: #3b82f6;
+            --primary-dark: #1e40af;
+            --secondary: #d4af37;
+            --secondary-light: #e8c766;
+            --light: #f8f9fa;
+            --dark: #212529;
+            --gray: #6c757d;
+            --light-gray: #e9ecef;
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            color: var(--dark);
+        }
+
+        body.dark-mode header {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+        }
+
+        body.dark-mode footer {
+            background: linear-gradient(135deg, var(--primary-dark) 0%, var(--primary) 100%);
+        }
+
+        body.dark-mode .card,
+        body.dark-mode .resource-card,
+        body.dark-mode .schedule,
+        body.dark-mode .schedule-item {
+            background: white;
+            color: var(--dark);
+        }
+
+        body.dark-mode .card h3,
+        body.dark-mode .resource-card h3,
+        body.dark-mode .section-title {
+            color: var(--primary);
+        }
+
+        body.dark-mode .card p,
+        body.dark-mode .resource-card p {
+            color: var(--gray);
+        }
+
+        body.dark-mode .card-image,
+        body.dark-mode .resource-icon {
+            background: var(--light-gray);
+            color: var(--primary);
+        }
+
+        body.dark-mode .schedule-item {
+            background: var(--light);
+        }
+
+        body.dark-mode .schedule-item:hover {
+            background: #f0f5ff;
+        }
+
+        body.dark-mode .settings-menu {
+            background: white;
+            color: var(--dark);
+        }
+
+        body.dark-mode .settings-menu-item {
+            color: var(--dark);
+        }
+
+        body.dark-mode .settings-menu-item:hover {
+            background: var(--light);
+            color: var(--primary);
+        }
+
+        body.dark-mode .theme-options {
+            background: var(--light-gray);
+        }
     </style>
 </head>
 
@@ -560,9 +769,36 @@
                     </div>
                 </div>
                 <div class="nav-buttons">
-                    <button class="nav-btn active"><i class="fas fa-info-circle"></i> Sobre</button>
+                    <button class="nav-btn"><i class="fas fa-info-circle"></i> Sobre</button>
                     <button class="nav-btn"><i class="fas fa-question-circle"></i> Ajuda</button>
                     <button class="nav-btn"><i class="fas fa-home"></i> Início</button>
+
+                    <!-- Botão de Configurações -->
+                    <div class="settings-container">
+                        <button class="settings-btn" onclick="toggleSettings()">
+                            <i class="fas fa-cog"></i> Configurações
+                        </button>
+                        <div class="settings-menu" id="settingsMenu">
+                            <button class="settings-menu-item" onclick="toggleTheme()">
+                                <i class="fas fa-palette"></i>
+                                <span>Tema</span>
+                                <div class="theme-options">
+                                    
+                                    <button class="settings-menu-item">
+                                        <a href="perfil.html">
+                                            <i class="fas fa-user"></i>
+                                            Meu Perfil
+                                        </a>
+                                    </button>
+                                     <button class="settings-menu-item" onclick="logout()">
+                                <i class="fas fa-sign-out-alt"></i>
+                                Sair
+                            </button>
+
+                                </div>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="hero">
@@ -728,16 +964,65 @@
     </footer>
 
     <script>
-        // Adicionar data atual
-        document.addEventListener('DOMContentLoaded', function () {
-            const today = new Date();
-            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-            const dateString = today.toLocaleDateString('pt-BR', options);
+        // Gerenciamento de Configurações
+        function toggleSettings() {
+            const menu = document.getElementById('settingsMenu');
+            menu.classList.toggle('active');
+        }
 
-            // Adicionar a data ao hero
-            const hero = document.querySelector('.hero p');
-            hero.innerHTML += `<br><small><i class="far fa-calendar"></i> Hoje é ${dateString}</small>`;
+        // Fechar menu ao clicar fora
+        document.addEventListener('click', function (event) {
+            const settingsContainer = document.querySelector('.settings-container');
+            const settingsMenu = document.getElementById('settingsMenu');
+
+            if (!settingsContainer.contains(event.target)) {
+                settingsMenu.classList.remove('active');
+            }
         });
+
+        // Gerenciamento de Tema
+        function setTheme(theme) {
+            if (theme === 'dark') {
+                document.body.classList.add('dark-mode');
+                document.querySelector('.theme-light').classList.remove('active');
+                document.querySelector('.theme-dark').classList.add('active');
+            } else {
+                document.body.classList.remove('dark-mode');
+                document.querySelector('.theme-light').classList.add('active');
+                document.querySelector('.theme-dark').classList.remove('active');
+            }
+            localStorage.setItem('theme', theme);
+        }
+
+        function toggleTheme() {
+            const isDark = document.body.classList.contains('dark-mode');
+            setTheme(isDark ? 'light' : 'dark');
+        }
+
+        // Carregar tema salvo
+        document.addEventListener('DOMContentLoaded', function () {
+            const savedTheme = localStorage.getItem('theme') || 'light';
+            setTheme(savedTheme);
+        });
+
+        // Logout
+        function logout() {
+            if (confirm('Tem certeza que deseja sair?')) {
+                alert('Você foi desconectado com sucesso.');
+                // Redirecionar para a página inicial
+                window.location.href = 'index.html';
+            }
+        }
+
+        // Para a página de perfil - confirmação de exclusão de conta
+        function confirmDelete() {
+            if (confirm('Tem certeza que deseja excluir sua conta? Esta ação é irreversível e todos os seus dados serão perdidos.')) {
+                if (confirm('Esta é sua última chance. Confirmar exclusão permanente da conta?')) {
+                    alert('Conta excluída com sucesso. Sentiremos sua falta!');
+                    window.location.href = 'index.html';
+                }
+            }
+        }
     </script>
 </body>
 
