--- a/frontend/retiros.html
+++ b/frontend/retiros.html
@@ -104,6 +104,7 @@
         .nav-buttons {
             display: flex;
             gap: 10px;
+            align-items: center;
         }
 
         .nav-btn {
@@ -132,6 +133,128 @@
             box-shadow: 0 0 0 2px rgba(255,255,255,0.5);
         }
 
+        .settings-container {
+            position: relative;
+        }
+
+        .settings-btn {
+            background: rgba(255,255,255,0.15);
+            border: none;
+            padding: 10px 18px;
+            border-radius: 30px;
+            color: white;
+            font-weight: 600;
+            cursor: pointer;
+            transition: var(--transition);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            backdrop-filter: blur(5px);
+        }
+
+        .settings-btn:hover {
+            background: rgba(255,255,255,0.25);
+            transform: translateY(-2px);
+        }
+
+        .settings-menu {
+            position: absolute;
+            top: 50px;
+            right: 0;
+            background: white;
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
+            padding: 15px 0;
+            min-width: 200px;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-10px);
+            transition: var(--transition);
+            z-index: 1000;
+        }
+
+        .settings-menu.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
+        .settings-menu-item {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px 20px;
+            color: var(--dark);
+            text-decoration: none;
+            transition: var(--transition);
+            border: none;
+            background: none;
+            width: 100%;
+            text-align: left;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .settings-menu-item:hover {
+            background: var(--light);
+            color: var(--primary);
+        }
+
+        .settings-menu-item i {
+            width: 20px;
+            text-align: center;
+            color: var(--secondary);
+        }
+
+        .settings-menu-divider {
+            height: 1px;
+            background: var(--light-gray);
+            margin: 8px 0;
+        }
+
+        .theme-toggle {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        .theme-options {
+            display: flex;
+            gap: 5px;
+            background: var(--light-gray);
+            padding: 4px;
+            border-radius: 20px;
+        }
+
+        .theme-option {
+            width: 30px;
+            height: 30px;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: var(--transition);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+        }
+
+        .theme-option.active {
+            background: var(--primary);
+            color: white;
+        }
+
+        .theme-light {
+            background: #f8f9fa;
+            color: #212529;
+        }
+
+        .theme-dark {
+            background: #212529;
+            color: #f8f9fa;
+        }
+
         .hero {
             text-align: center;
             padding: 40px 20px;
@@ -156,6 +279,18 @@
         }
 
         /* Main Content */
+        .settings-menu {
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-10px);
+        }
+
+        .settings-menu.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
         main {
             padding: 40px 0;
         }
@@ -174,6 +309,46 @@
 
         .section-title i {
             color: var(--secondary);
+        }
+
+        .btn {
+            display: inline-block;
+            background: var(--primary);
+            color: white;
+            padding: 12px 24px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: var(--transition);
+            border: none;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        .btn:hover {
+            background: var(--primary-light);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+        }
+
+        .btn-secondary {
+            background: var(--secondary);
+            color: var(--dark);
+        }
+
+        .btn-secondary:hover {
+            background: var(--secondary-light);
+        }
+
+        .btn-outline {
+            background: transparent;
+            border: 2px solid var(--primary);
+            color: var(--primary);
+        }
+
+        .btn-outline:hover {
+            background: var(--primary);
+            color: white;
         }
 
         .cards-grid {
@@ -243,91 +418,6 @@
         .card-image i {
             font-size: 40px;
             opacity: 0.5;
-        }
-
-        .btn {
-            display: inline-block;
-            background: var(--primary);
-            color: white;
-            padding: 12px 24px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: 600;
-            transition: var(--transition);
-            border: none;
-            cursor: pointer;
-            text-align: center;
-        }
-
-        .btn:hover {
-            background: var(--primary-light);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-        }
-
-        .btn-secondary {
-            background: var(--secondary);
-            color: var(--dark);
-        }
-
-        .btn-secondary:hover {
-            background: var(--secondary-light);
-        }
-
-        .btn-outline {
-            background: transparent;
-            border: 2px solid var(--primary);
-            color: var(--primary);
-        }
-
-        .btn-outline:hover {
-            background: var(--primary);
-            color: white;
-        }
-
-        .resources {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-bottom: 40px;
-        }
-
-        .resource-card {
-            background: white;
-            border-radius: var(--radius);
-            padding: 25px;
-            box-shadow: var(--shadow);
-            transition: var(--transition);
-            text-align: center;
-            border-top: 4px solid var(--primary);
-        }
-
-        .resource-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .resource-icon {
-            width: 60px;
-            height: 60px;
-            background: var(--light-gray);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto 15px;
-            font-size: 24px;
-            color: var(--primary);
-        }
-
-        .resource-card h3 {
-            margin-bottom: 10px;
-            color: var(--primary);
-        }
-
-        .resource-card p {
-            color: var(--gray);
-            margin-bottom: 20px;
-            font-size: 14px;
         }
 
         .retreats-grid {
@@ -513,14 +603,18 @@
             .section-title {
                 font-size: 20px;
             }
+
+            .special-mass-item {
+                flex-direction: column;
+            }
+
+            .special-mass-date {
+                align-self: flex-start;
+            }
         }
 
         @media (max-width: 480px) {
             .cards-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .resources {
                 grid-template-columns: 1fr;
             }
 
@@ -532,6 +626,72 @@
             .retreats-grid {
                 grid-template-columns: 1fr;
             }
+        }
+
+        /* Modo Escuro - Apenas cores azuis, conteúdo principal branco */
+        body.dark-mode {
+            --primary: #1e3a8a;
+            --primary-light: #3b82f6;
+            --primary-dark: #1e40af;
+            --secondary: #d4af37;
+            --secondary-light: #e8c766;
+            --light: #f8f9fa;
+            --dark: #212529;
+            --gray: #6c757d;
+            --light-gray: #e9ecef;
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            color: var(--dark);
+        }
+
+        body.dark-mode header {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+        }
+
+        body.dark-mode footer {
+            background: linear-gradient(135deg, var(--primary-dark) 0%, var(--primary) 100%);
+        }
+
+        body.dark-mode .card,
+        body.dark-mode .retreat-card,
+        body.dark-mode .schedule,
+        body.dark-mode .schedule-item {
+            background: white;
+            color: var(--dark);
+        }
+
+        body.dark-mode .card h3,
+        body.dark-mode .retreat-card h3,
+        body.dark-mode .section-title {
+            color: var(--primary);
+        }
+
+        body.dark-mode .card p,
+        body.dark-mode .retreat-card p {
+            color: var(--gray);
+        }
+
+        body.dark-mode .card-image,
+        body.dark-mode .retreat-image {
+            background: var(--light-gray);
+            color: var(--primary);
+        }
+
+        body.dark-mode .settings-menu {
+            background: white;
+            color: var(--dark);
+        }
+
+        body.dark-mode .settings-menu-item {
+            color: var(--dark);
+        }
+
+        body.dark-mode .settings-menu-item:hover {
+            background: var(--light);
+            color: var(--primary);
+        }
+
+        body.dark-mode .theme-options {
+            background: var(--light-gray);
         }
     </style>
 </head>
@@ -552,6 +712,32 @@
                     <button class="nav-btn"><i class="fas fa-info-circle"></i> Sobre</button>
                     <button class="nav-btn"><i class="fas fa-question-circle"></i> Ajuda</button>
                     <a href="index.html" class="nav-btn"><i class="fas fa-home"></i> Início</a>
+
+                         <div class="settings-container">
+                        <button class="settings-btn" onclick="toggleSettings()">
+                            <i class="fas fa-cog"></i> Configurações
+                        </button>
+                        <div class="settings-menu" id="settingsMenu">
+                            <button class="settings-menu-item" onclick="toggleTheme()">
+                                <i class="fas fa-palette"></i>
+                                <span>Tema</span>
+                                <div class="theme-options">
+                                    
+                                    <button class="settings-menu-item">
+                                        <a href="perfil.html">
+                                            <i class="fas fa-user"></i>
+                                            Meu Perfil
+                                        </a>
+                                    </button>
+                                     <button class="settings-menu-item" onclick="logout()">
+                                <i class="fas fa-sign-out-alt"></i>
+                                Sair
+                            </button>
+
+                                </div>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="hero">
@@ -647,7 +833,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Comunidade São Francisco</h3>
+                    <h3>Paróquia São José Operário</h3>
                     <p>Uma família em fé, esperança e amor. Junte-se a nós em nossa jornada espiritual.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -686,7 +872,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy;2025, FéTech. Todos os direitos reservados. FéTech, o logotipo da FéTech, e o Sistema de
+                <p>&copy; 2025, FéTech. Todos os direitos reservados. FéTech, o logotipo da FéTech, e o Sistema de
                     Organização Pastoral são marcas de uso exclusivo do projeto acadêmico desenvolvido no Instituto
                     Federal Catarinense. Outros nomes de marcas e produtos mencionados neste site podem ser marcas
                     registradas de seus respectivos proprietários.
@@ -697,5 +883,57 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        // Gerenciamento de Configurações
+        function toggleSettings() {
+            const menu = document.getElementById('settingsMenu');
+            menu.classList.toggle('active');
+        }
+
+        // Fechar menu ao clicar fora
+        document.addEventListener('click', function (event) {
+            const settingsContainer = document.querySelector('.settings-container');
+            const settingsMenu = document.getElementById('settingsMenu');
+
+            if (!settingsContainer.contains(event.target)) {
+                settingsMenu.classList.remove('active');
+            }
+        });
+
+        // Gerenciamento de Tema
+        function setTheme(theme) {
+            if (theme === 'dark') {
+                document.body.classList.add('dark-mode');
+                document.querySelector('.theme-light').classList.remove('active');
+                document.querySelector('.theme-dark').classList.add('active');
+            } else {
+                document.body.classList.remove('dark-mode');
+                document.querySelector('.theme-light').classList.add('active');
+                document.querySelector('.theme-dark').classList.remove('active');
+            }
+            localStorage.setItem('theme', theme);
+        }
+
+        function toggleTheme() {
+            const isDark = document.body.classList.contains('dark-mode');
+            setTheme(isDark ? 'light' : 'dark');
+        }
+
+        // Carregar tema salvo
+        document.addEventListener('DOMContentLoaded', function () {
+            const savedTheme = localStorage.getItem('theme') || 'light';
+            setTheme(savedTheme);
+        });
+
+        // Logout
+        function logout() {
+            if (confirm('Tem certeza que deseja sair?')) {
+                alert('Você foi desconectado com sucesso.');
+                // Redirecionar para a página inicial
+                window.location.href = 'index.html';
+            }
+        }
+    </script>
 </body>
 </html>
