versão com novas paginas de login, sobre, cadastro e ajuda

--- a/frontend/perfil.html
+++ b/frontend/perfil.html
@@ -840,9 +840,9 @@
                     </div>
                 </div>
                 <div class="nav-buttons">
+                    <a href="sobre.html" class="nav-btn"><i class="fas fa-info-circle"></i> Sobre</a>
+                    <a href="index.html" class="nav-btn"><i class="fas fa-question-circle"></i> Ajuda</a>
                     <a href="index.html" class="nav-btn"><i class="fas fa-home"></i> Início</a>
-                    <button class="nav-btn"><i class="fas fa-info-circle"></i> Sobre</button>
-                    <button class="nav-btn"><i class="fas fa-question-circle"></i> Ajuda</button>
 
                     <!-- Botão de Configurações - CORRIGIDO -->
                     <div class="settings-container">
@@ -1065,6 +1065,8 @@
                         <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
                         <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
                         <li><a href="eventos.html"><i class="fas fa-chevron-right"></i> Eventos</a></li>
+                        <li><a href="leitura.html"><i class="fas fa-chevron-right"></i> Leitura do Dia</a></li>
+                        <li><a href="enciclopedias.html"><i class="fas fa-chevron-right"></i> Enciclopédias</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
